--- a/FightSystem/adoc/erd.adoc
+++ b/FightSystem/adoc/erd.adoc
@@ -1,30 +1,26 @@
 @startuml
-Fighter -- Match
-(Fighter,Match) . Lineup
-Team -- Match
-Division -- Fighter
-Fighter -- Team
-Match <|-- OneVsOne
-Match <|-- TeamMatch
-
-Fighter  --  Team
-(Fighter, Team) . TeamLineUp
-
-
-
-
-
-class Team{
+class Match {
+-teamA: Team
+-teamB: Team
+-lineUpPosition
 }
+note left: lineup wird durch lineUpPosition \n(Reihenfolge) festgelegt.
 
-class Fighter{
+class Team {
 
 }
-class Match{
+note left : Ein Team kann nur aus einer Person (OneVsOne)\n oder mehreren Personen bestehen.
 
+class Person {
 
 }
-enum Division
+
+enum Divison
 
 
+Divison <-- Person
+Person "*" -- "*" Team
+Team "1" -- "*" Match: Team 1
+Team "1" -- "*" Match: Team 2
+(Team,Person) . TeamMembers
 @enduml
